<resources>
    <string name="app_name">CrossWarr</string>
    <string name="link_video">¿Cómo lo hago?</string>
    <string name="description">Descripción del ejercicio</string>
    <string name="exercise_name">Nombre del ejercicio</string>
    <string name="materials">Materiales</string>
    <string name="type">Tipo de tren</string>
    <string name="bottom_nav_menu_challenge">Desafío</string>
    <string name="bottom_nav_menu_exercises">Ejercicios</string>
    <string name="bottom_nav_menu_challenges">Historial</string>
    <string name="menu_selectable_spanish">Español</string>
    <string name="menu_selectable_english">English</string>
    <string name="tv_title_fragment_challenge_detail">Desafío del día</string>
    <string name="tv_subtitle_fragment_challenge_detail">¡LISTO PARA EL DESAFÍO!</string>
    <string name="btn_start_fragment_challenge_detail">Iniciar desafío</string>
    <string name="tv_exercise_name_card_list_exercise_item">Exercise name</string>
    <string name="tv_challenge_name_card_list_challenges_item">Challenge name</string>
    <string name="tv_challenge_date_card_list_challenges_item">Challenge date</string>
    <string name="appbar_nav_menu_challenge_edit">Editar desafíos</string>
    <string name="appbar_nav_menu_exercises_edit">Editar ejercicios</string>
    <string name="appbar_nav_menu_users_edit">Editar usuarios</string>
    <string name="tv_head_title_menu_settings">Ajustes</string>
    <string name="switch_materiales_menu_settings">Mostrar Desafíos con materiales</string>
    <string name="switch_lenguage_menu_settings">Cambiar idioma a inglés</string>
    <string name="appbar_nav_menu_admin_options">Opciones de administrador</string>
    <string name="appbar_nav_menu_logout">Log out</string>
    <string name="appbar_nav_menu_settings">Ajustes</string>
    <string name="tv_user_id_card_list_user_item">ID del usuario</string>
    <string name="tv_title_fragment_daily_challenge">Desafío del día</string>
    <string name="tv_subtitle_fragment_daily_challenge">LISTO PARA EL DESAFÍO</string>
    <string name="tv_challenge_title_fragment_daily_challenge">Titulo del desafío</string>
    <string name="tv_challenge_description_fragment_daily_challenge">Descripción del desafío</string>
    <string name="tv_challenge_duration_fragment_daily_challenge">Duración del desafío</string>
    <string name="btn_start_challenge_fragment_daily_challenge">Iniciar el desafío</string>
    <string name="tv_user_email_card_list_user_item">Email del usuario</string>
    <string name="tv_user_role_card_list_user_item">Rol del usuario</string>
    <string name="btn_new_fragment_users_edition_list">Crear nuevo usuario</string>
    <string name="btn_new_fragment_challenges_edition_list">Crear nuevo desafío</string>
    <string name="btn_new_fragment_exercises_edition_list">Crear nuevo ejercicio</string>
    <string name="title_fragment_users_edition">Actualizar usuario</string>
    <string name="name_fragment_users_edition">Nombre completo</string>
    <string name="email_fragment_users_edition">Correo electrónico</string>
    <string name="role_fragment_users_edition">Rol: Administrador</string>
    <string name="btn_create_user">Guardar usuario</string>
    <string name="title_fragment_exercises_edition">Crear ejercicio</string>
    <string name="name_fragment_exercises_edition">Nombre del ejercicio</string>
    <string name="btn_create_exercises">Guardar ejercicio</string>
    <string name="rb_inf_fragment_exercises_edition">Tren inferior</string>
    <string name="rb_sup_fragment_exercises_edition">Tren superior</string>
    <string name="rb_core_fragment_exercises_edition">Core</string>
    <string name="description_fragment_exercises_edition">Descripción del ejercicio</string>
    <string name="title_fragment_challenges_edition">Crear desafío</string>
    <string name="challenge_name_fragment_challenges_edition">Nombre del desafío</string>
    <string name="activation_date_fragment_challenges_edition">Fecha de activación</string>
    <string name="type_amrap_fragment_challenges_edition">AMRAP</string>
    <string name="type_emom_fragment_challenges_edition">EMOM</string>
    <string name="type_ft_fragment_challenges_edition">FT</string>
    <string name="exercises_and_reps_title_fragment_challenges_edition">Ejercicios y repeticiones</string>
    <string name="rb_sup_fragment_challenges_edition">Tren superior</string>
    <string name="reps_fragment_challenges_edition">Reps</string>
    <string name="rb_inf_fragment_challenges_edition">Tren inferior</string>
    <string name="rb_core_fragment_challenges_edition">Core</string>
    <string name="title_challenge_type_fragment_challenges_edition">Tipo de desafío</string>
    <string name="btn_create_challenge">Guardar desafío</string>
    <string name="switch_materials_fragment_challenges_edition">¿Necesita material?</string>
    <string name="switch_materials_fragment_exercises_edition">¿Necesita material?</string>
    <string name="image_url_fragment_exercises_edition">URL de la imagen</string>
    <string name="video_url_fragment_exercises_edition">URL del vídeo</string>
    <string name="materials_list_fragment_exercises_edition">Materiales (separados por comas)</string>
    <string name="nav_graph_daily_challenge">Desafío del dia</string>
    <string name="nav_graph_exercises">Lista de ejercicios</string>
    <string name="nav_graph_settings">Ajustes</string>
    <string name="nav_graph_records">Historial de desafíos</string>
    <string name="nav_graph_challenges_edition">Nuevo desafío</string>
    <string name="nav_graph_challenges_list">Lista de desafíos</string>
    <string name="nav_graph_exercises_edition">Nuevo ejercicio</string>
    <string name="nav_graph_users_edition">Edición de usuario</string>
    <string name="nav_graph_users_list">Lista de usuarios</string>
    <string name="tv_challenge_status_card_list_challenges_item">Pendiente</string>
    <string name="tv_challenge_time_card_list_challenges_item">Tiempo: --:--</string>
    <string name="switch_notifications_menu_settings">Mostrar notificaciones</string>
    <string name="tv_title_user_profile">Mi Perfil</string>
    <string name="hint_name_user_profile">Nombre completo</string>
    <string name="hint_email_user_profile">Correo electrónico</string>
    <string name="tv_preferences_user_profile">Preferencias de la app</string>
    <string name="switch_materials_user_profile">Tengo acceso a materiales / equipamiento</string>
    <string name="switch_notifications_user_profile">Mostrar notificaciones</string>
    <string name="hint_languaje_user_profile">Idioma preferido</string>
    <string name="btn_tab_register_activity_login">Registrarse</string>
    <string name="btn_tab_login_activity_login">Iniciar sesión</string>
    <string name="hint_user_name_activity_login">Nombre de usuario</string>
    <string name="hint_email_activity_login">Email</string>
    <string name="hint_password_activity_login">Contraseña</string>
    <string name="btn_continue_activity_login">Continuar</string>
    <string name="tvForgotPassword_activity_login">He olvidado mi contraseña</string>
    <string name="nav_graph_noChallenge">Día de descanso</string>
    <string name="rest_day_message">Hoy es día de descanso.\n¡No hay desafíos disponibles!</string>
    <string name="challenges_edition_view_adapter_getItemCount_noDataChallenge">Fecha no disponible</string>
    <string name="challenges_user_view_adapter_bind_noData_message">Fecha no disponible</string>
    <string name="challenges_user_view_adapter_bind_completed_message">Completado</string>
    <string name="challenges_user_view_adapter_bind_pending_message">Pendiente</string>
    <string name="challenges_user_view_adapter_bind_your_time">Tu tiempo: %1$02d:%2$02d</string>
    <string name="user_edition_view_adapter_bind_admin">Administrador</string>
    <string name="user_edition_view_adapter_bind_user">Usuario</string>
    <string name="challenge_detail_description_amrap">Descripción del desafío: Este desafío consistirá en un %1$s *,\n- Tren superior: %2$s. %3$s repeticiones.\n- Tren inferior: %4$s. %5$s repeticiones.\n- Core: %6$s. %7$s repeticiones.\nEl tiempo para superar el desafío es de: %8$s minutos\n\n* As Many Rounds As possible: Haz tantas rondas de este bloque de ejercicios como puedas.</string>
    <string name="challenge_detail_description_ft">Descripción del desafío: Este desafío consistirá en un %1$s *,\n- Tren superior: %2$s. %3$s repeticiones.\n- Tren inferior: %4$s. %5$s repeticiones.\n- Core: %6$s. %7$s repeticiones.\nEl tiempo para superar el desafío es de: %8$s minutos\n\n* For time: Tu tiempo máximo para completar estos ejercicios es de %9$s minutos.</string>
    <string name="challenge_detail_description_emom">Descripción del desafío: Este desafío consistirá en un %1$s *,\n- Tren superior: %2$s. %3$s repeticiones.\n- Tren inferior: %4$s. %5$s repeticiones.\n- Core: %6$s. %7$s repeticiones.\nEl tiempo para superar el desafío es de: %8$s minutos\n\n* Every minute on the minute: Tienes un minuto para hacer las repeticiones y descansar, ¡Mientras antes las hagas más tiempo descansas!</string>
    <string name="challenge_detail_description_error">Error: El tipo de desafío guardado en la base de datos no es válido. Tipo recibido: \'%1$s\'</string>
    <string name="challenge_detail_duration">Duración del desafío: %1$s min.</string>
    <string name="challenge_detail_btn_stop">Terminar / Parar</string>
    <string name="challenge_detail_toast_completed">¡Desafío completado!</string>
    <string name="challenge_detail_challenge_finised">Desafío Finalizado</string>
    <string name="challenge_detail_toast_time_trained">Has entrenado: %1$02d:%2$02d</string>
    <string name="challenge_detail_error_saving_time">Error al guardar el tiempo.</string>
    <string name="challenges_edition_saveChallenge_error">Por favor, rellena todos los campos</string>
    <string name="challenges_edition_saveChallenge_success">Desafío guardado correctamente.</string>
    <string name="challenges_edition_saveChallenge_errorDate">Error al interpretar la fecha.</string>
    <string name="challenges_edition_saveChallenge_errorTimeOrReps">Asegúrate de que el tiempo y repeticiones sean números.</string>
    <string name="challenges_edition_list_toast_delete_error_date">Error: El desafío no tiene fecha de activación y no se puede verificar.</string>
    <string name="challenges_edition_list_toast_delete_error_challenge_published">No se puede borrar: Este desafío ya ha sido publicado.</string>
    <string name="challenges_edition_list_alertDialog_title">Borrar Challenge</string>
    <string name="challenges_edition_list_alertDialog_message">¿Estás seguro de que quieres borrar el challenge \'%1$s\'?</string>
    <string name="challenges_edition_list_alertDialog_btnYes">Sí, borrar"</string>
    <string name="challenges_edition_list_alertDialog_success">Desafío borrado</string>
    <string name="challenges_edition_list_alertDialog_btnCancel">Cancelar</string>
    <string name="exercise_detail_materials">Materiales: %1$s</string>
    <string name="exercise_detail_noMaterials">Sin material</string>
    <string name="exercise_edition_materials">Con materiales</string>
    <string name="exercise_edition_noMaterials">Sin materiales</string>
    <string name="exercise_edition_toast_error">Por favor, rellena todos los campos</string>
    <string name="exercise_edition_toast_success">¡Ejercicio guardado en Firebase!</string>
    <string name="exercises_edition_list_btn_delete_error">No se puede borrar: Este ejercicio está siendo utilizado en un Challenge.</string>
    <string name="exercises_edition_list_btn_delete_title">Borrar Ejercicio</string>
    <string name="exercises_edition_list_btn_delete_message">¿Estás seguro de que quieres borrar el ejercicio \'%1$s\'?</string>
    <string name="exercises_edition_list_btn_delete_yes">Sí, borrar</string>
</resources>