<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/exercise_name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/type"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="4dp"
        android:text="@string/link_video"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_pokemon_detail_types_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/materials"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintStart_toStartOf="@+id/left_padding"
        app:layout_constraintTop_toBottomOf="@+id/poke_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="8dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_material_detail_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            tools:text="Mancuernas" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_material_detail_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:clickable="false"
            android:focusable="false"
            tools:text="Goma" />
    </LinearLayout>

</LinearLayout>